# concat

./: .gitignore  .travis.yml  ChangeLog.md  Entail.hs  README.md  ad_rev.html  cabal.project  concat.cabal  flake.nix  garnix.yaml  hie.yaml  make_tags  packcheck.sh  parse-cabal-project.nix  shell.nix  stack.yaml  todo.md
.circleci/: config.yml
.github/workflows/: ci.yml  pages.yml
classes/: LICENSE  concat-classes.cabal
classes/src/ConCat/: Additive.hs  AltCat.hs  Category.hs  MinMax.hs  Misc.hs  Oops.hs  Ops.inc  Orphans.hs  Pointed.hs  Rep.hs  Zip.hs
classes/src/ConCat/Experimental/: A.hs  B.hs  C.hs  D.hs  E.hs  F.hs
core/: concat.cabal
core/src/ConCat/: Additive.hs  D.hs  Expr.hs  Foo.hs  Misc.hs
examples/: concat-examples.cabal
examples/app/: ad_rev.lhs
examples/src/ConCat/: AD.hs  ADFun.hs  AbsTy.inc  Additive.hs  AdditiveFun.hs  AdditiveMap.hs  Affine.hs  Aggregate.hs  AltAggregate.hs  Arr.hs  Chain.hs  Choice.hs  Circuit.hs  Classifier.hs  Complex.hs  Continuation.hs  Deep.hs  Demand.hs  Distrib.hs  Distribution.hs  Dual.hs  DualAdditive.hs  FFT.hs  Fin.hs  Finite.hs  Fun.hs  GAD.hs  GLSL.hs  GradientDescent.hs  Graph.hs  Gui.hs  Image.hs  Incremental.hs  Interval.hs  Isomorphism.hs  KnownNatOps.hs  LC.hs  Local.hs  Nat.hs  NatArr.hs  (+22 more)
examples/src/ConCat/Free/: Affine.hs  Diagonal.hs  LinearCol.hs  LinearRow.hs  VectorSpace.hs
examples/test/: BasicTests.hs  Examples.hs  GoldTests.hs  Miscellany.hs  Test.hs  Utils.hs  testHasFins.hs  ud_dl_2.hs  ud_dl_2A.hs
examples/test/gold/: Makefile  add-adf-syn.golden  add-adr-dot.golden  add-adr-syn.golden  add-dot.golden  add-gradr-dot.golden  add-gradr-syn.golden  add-iv-dot.golden  add-iv-syn.golden  add-uncurry-dot.golden  add-uncurry-syn.golden  app-fun-bool-dot.golden  app-fun-bool-syn.golden  complex-mul-a-dot.golden  complex-mul-dot.golden  complex-mul-syn.golden  const-dot.golden  const-syn.golden  const-y-dot.golden  const-y-syn.golden  cos-2x-adf-dot.golden  cos-2x-adf-syn.golden  cos-2x-adr-dot.golden  cos-2x-adr-syn.golden  cos-2x-gradr-dot.golden  cos-2x-gradr-syn.golden  cos-2xx-adf-dot.golden  cos-2xx-adf-syn.golden  cos-2xx-adr-dot.golden  cos-2xx-adr-syn.golden  cos-2xx-dot.golden  cos-2xx-gradr-dot.golden  cos-2xx-gradr-syn.golden  cos-2xx-syn.golden  cos-adf-dot.golden  cos-adf-syn.golden  cos-adfl-dot.golden  cos-adfl-syn.golden  cos-adr-dot.golden  cos-adr-syn.golden  (+233 more)
graphics/: LICENSE  README.md  concat-graphics.cabal  stack.yaml  todo.md
graphics/src/ConCat/Graphics/: Color.hs  GLSL.hs  Image.hs
graphics/test/: Examples.hs
hardware/: LICENSE  README.md  concat-hardware.cabal
hardware/src/ConCat/Hardware/: Verilog.hs
hardware/test/: Examples.hs  cmplx.v  fft_fc_rb3_tb.v  trig.v
inline/: concat-inline.cabal
inline/src/ConCat/Inline/: ClassOp.hs  Plugin.hs  SampleMethods.hs
known/: concat-known.cabal
known/src/ConCat/: Known.hs
netlist/src/ConCat/Netlist/: Verilog.hs
nix/: concat-overlay.nix  lib.nix  netlist-overlay.nix  nixpkgs-pin.json  pinned-nixpkgs.nix  pkgs.nix
other/: header.md  lhs.css  proofs.md  template.html
plugin/: concat-plugin.cabal
plugin/src/: ConCat.hs
plugin/src/ConCat/: BuildDictionary.hs  NormaliseType.hs  OkType.hs  Plugin.hs  Rebox.hs  Simplify.hs  Translators.hs
plugin/test/: BasicTests.hs  GoldTests.hs  SimpleSpec.hs  Test.hs  Types.hs  Utils.hs
plugin/test/gold/: add-adr-syn.golden  add-gradr-dot.golden  add-gradr-syn.golden  complex-mul-a-syn.golden  cos-2x-adf-syn.golden  cos-2x-adr-syn.golden  cos-2x-gradr-syn.golden  cos-2xx-adf-syn.golden  cos-2xx-adr-dot.golden  cos-2xx-gradr-syn.golden  cos-2xx-syn.golden  cos-adr-syn.golden  cos-gradr-syn.golden  cos-xpy-adf-syn.golden  cos-xpy-adr-syn.golden  magSqr-adf-dot.golden  magSqr-adf-syn.golden  magSqr-gradr-syn.golden  sqr-adr-syn.golden  sqr-syn.golden  twice-adf-dot.golden  twice-adf-syn.golden  twice-adr-syn.golden  xp3y-syn.golden
plugin/test/gold/810/: add-dot.golden  add-uncurry-dot.golden  add-uncurry-syn.golden  cos-2xx-adr-syn.golden  cos-xpy-adf-dot.golden  dup-dot.golden  magSqr-adf-syn.golden  magSqr-adr-dot.golden  magSqr-adr-syn.golden  magSqr-gradr-dot.golden  sin-adr-syn.golden  sqr-adf-dot.golden  sqr-adf-syn.golden  sqr-gradr-dot.golden
plugin/test/gold/9.0.2/: cos-2x-gradr-syn.golden  cos-2xx-adf-syn.golden  cos-2xx-gradr-syn.golden  cos-adf-dot.golden  cos-adf-syn.golden  cos-adr-syn.golden  magSqr-adf-syn.golden  sqr-adf-syn.golden
plugin/test/gold/9.2.1/: cosSinProd-syn.golden  horner-syn.golden  sqr-adf-dot.golden  sqr-adr-syn.golden  sqr-gradr-syn.golden  twice-adf-syn.golden
plugin/test/gold/9.2.2/: add-gradr-syn.golden  cos-2xx-adf-syn.golden  cos-xpy-adf-syn.golden  dup-syn.golden  magSqr-adf-dot.golden  (+3 more)
sandbox/: concat-sandbox.cabal
sandbox/test/: natnorm.hs  partial.hs  so_BoolHasFin.hs  so_natnorm.hs
satisfy/: concat-satisfy.cabal
satisfy/src/ConCat/: BuildDictionary.hs  Satisfy.hs  Simplify.hs
satisfy/src/ConCat/Satisfy/: Plugin.hs
src/: AD.hs  Additive.hs  Basis.hs  ConCat.hs  Deriv.hs  FLMap.hs  Foo.hs  Graph.hs  LMap.hs  Misc.hs  Module.hs  Orphans.hs  PostLinear.hs  Ring.hs  Semimodule.hs  Tower.hs  TrieCat.hs
src/ConCat/: AD.hs  ADFun.hs  ADFun2.hs  AbsTy.inc  Additive.hs  AltCat.hs  Arr.hs  Aut.hs  Basis.hs  BuildDictionary.hs  C.hs  CCC.hs  Category.hs  Circuit.hs  Complex.hs  ConCat.hs  D.hs  Demand.hs  Deriv.hs  E.hs  EmptyCase.hs  Entail.hs  Exp.hs  Expr.hs  F.hs  FLMap.hs  Float.hs  Foo.hs  Fun.hs  GAD.hs  GLSL.hs  GenGLSL.hs  GradientDescent.hs  Graph.hs  Gui.hs  Image.hs  Incremental.hs  Interval.hs  LMap.hs  Lambda.hs  (+19 more)
src/ConCat/Free/: CoercibleBug.hs  Diagonal.hs  LinearCol.hs  LinearRow.hs  VectorSpace.hs
src/ConCat/Obsolete/: Deriv.hs  FLMap.hs  PostLinear.hs  Tower.hs
src/Free/: Linear.hs  LinearCol.hs  LinearRow.hs  VectorSpace.hs
src/HERMIT/GHC/: Typechecker.hs
src/Obsolete/: AD.hs  ADFun.hs  AssocCategory.hs  Basic.hs  Basis.hs  EmptyCase.hs  Entail.hs  Float.hs  GadtCCC.hs  OptRules.hs  ShowUtils.hs
src/Obsolete/Assoc/: LinearRow.hs
test/: Basic.hs  Examples.hs  Makefile  OptRules.hs  Test.hs
(+70 files in other folders)
