name:                concat-graphics
version:             0.1.0.0
synopsis:            Graphics via compiling-to-categories
description:         Graphics via compiling-to-categories
license:             BSD3
license-file:        LICENSE
author:              Conal Elliott
maintainer:          conal@conal.net
copyright:           2017 Conal Elliott
category:            graphics
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

source-repository head
  type:     git
  location: https://github.com/conal/concat

library
  hs-source-dirs:      src
  exposed-modules:     ConCat.Graphics.GLSL
                       ConCat.Graphics.Color
                       ConCat.Graphics.Image
  build-depends:       base >= 4.7 && < 5
                     , bytestring >= 0.10.8.1
                     , aeson >= 1.0, aeson-pretty >= 0.8.5
                     , NumInstances
                     , concat-classes
                     , concat-examples
                     , containers
                     , directory
                     , language-glsl >= 0.3.0
                     , parsec
                     , prettyclass
                     , text >= 1.2.2.1
  default-language:    Haskell2010

executable graphics-examples
  hs-source-dirs:      test
  main-is:             Examples.hs
  build-depends:       base
                     , bytestring >= 0.10.8.1
                     , aeson >= 1.0, aeson-pretty >= 0.8.5
                     , concat-classes
                     , concat-examples
                     , concat-graphics
                     , concat-plugin
                     , ghc-prim
                     , language-glsl >= 0.3.0
                     , newtype-generics >= 0.5.3
                     , text >= 1.2.2.1

  default-language:    Haskell2010
  ghc-options:         -fplugin=ConCat.Plugin

executable graphics-trace
  hs-source-dirs:      test
  main-is:             Examples.hs
  build-depends:       base
                     , bytestring >= 0.10.8.1
                     , aeson >= 1.0, aeson-pretty >= 0.8.5
                     , concat-classes
                     , concat-examples
                     , concat-graphics
                     , concat-plugin
                     , ghc-prim
                     , language-glsl >= 0.3.0
                     , newtype-generics >= 0.5.3
                     , text >= 1.2.2.1
  default-language:    Haskell2010
  ghc-options:      -fplugin=ConCat.Plugin
                    -fplugin-opt=ConCat.Plugin:trace
