name:               concat-inline
version:            0.1.0.0
cabal-version:      >=1.18
synopsis:           Simple GHC plugin for inlining class-ops
description:        Simple GHC plugin for inlining class-ops
Category:           categories
license:            BSD3
author:             Conal Elliott
maintainer:         conal@conal.net
Copyright:          (c) 2016-2017 by Conal Elliott
build-type:         Simple

source-repository head
  type:             git
  location:         git://github.com/conal/concat

library
  default-language: Haskell2010
  hs-source-dirs:   src
  include-dirs:     src
  build-depends:    base >=4.9, ghc
  ghc-options:      -O2
  exposed-modules:
                    ConCat.Inline.ClassOp
                    ConCat.Inline.Plugin
                    ConCat.Inline.SampleMethods
