name:               concat-known
version:            0.1.0.0
cabal-version:      >=1.18
synopsis:           Entailments for KnownNat
description:        To eliminate when plugins no longer cause spurious recompilation.
Category:           Misc
license:            BSD3
author:             Conal Elliott
maintainer:         conal@conal.net
Copyright:          (c) 2018 by Conal Elliott
build-type:         Simple

source-repository head
  type:             git
  location:         git://github.com/conal/concat

library
  default-language: Haskell2010
  hs-source-dirs:   src
  include-dirs:     src
  build-depends:    base >=4.9, constraints, ghc-typelits-knownnat
  ghc-options:      -O2
  exposed-modules:  
                    ConCat.Known

