name:               concat-satisfy
version:            0.1.0.0
cabal-version:      >=1.18
synopsis:           GHC plugin for forcing constraint satisfaction
description:        GHC plugin for forcing constraint satisfaction
Category:           categories
license:            BSD3
author:             Conal Elliott
maintainer:         conal@conal.net
Copyright:          (c) 2018 by Conal Elliott
build-type:         Simple

source-repository head
  type:             git
  location:         git://github.com/conal/concat

library
  default-language: Haskell2010
  hs-source-dirs:   src
  include-dirs:     src
  build-depends:    base >=4.9
                  , ghc >= 8.0.1
                  , syb >= 0.6
                  , concat-inline
  ghc-options:      -O2
  exposed-modules:  
                    ConCat.Simplify
                    ConCat.BuildDictionary
                    ConCat.Satisfy
                    ConCat.Satisfy.Plugin

